/*
  Copyright 2019 www.dev5.cn, Inc. dev5@qq.com
 
  This file is part of X-MSG-IM.
 
  X-MSG-IM is free software: you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation, either version 3 of the License, or
  (at your option) any later version.

  X-MSG-IM is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.
 
  You should have received a copy of the GNU Affero General Public License
  along with X-MSG-IM.  If not, see <https://www.gnu.org/licenses/>.
 */
syntax = "proto3";
option java_package = "x.msg.pb";
option java_outer_classname = "PbXmsg";
message XmsgImGroupSendMsgReq
{
    string cgt = 1; 
    uint64 localMsgId = 2; 
    XmsgImMsg msg = 3; 
    map<string, string> ext = 4; 
}

message XmsgImGroupSendMsgRsp
{
    uint64 msgId = 1; 
    string gcgt = 2; 
    uint64 gts = 3; 
    map<string, string> ext = 4; 
}

message XmsgImMsg
{
    string type = 1; 
    XmsgImMsgText text = 2; 
    XmsgImMsgHtml html = 3; 
    XmsgImMsgImage image = 4; 
    XmsgImMsgVoice voice = 5; 
    XmsgImMsgVideo video = 6; 
    XmsgImMsgFile file = 7; 
    XmsgImMsgMerge merge = 8; 
    XmsgImMsgAt atx = 9; 
}

message XmsgImMsgText
{
    string text = 1; 
}

message XmsgImMsgHtml
{
    string html = 1; 
}

message XmsgImMsgImage
{
    string uri = 1; 
}

message XmsgImMsgVoice
{
    string uri = 1; 
}

message XmsgImMsgVideo
{
    string uri = 1; 
}

message XmsgImMsgFile
{
    string from = 1; 
    string fid = 2; 
}

message XmsgImMsgMerge
{
    repeated XmsgImMsg msg = 1; 
}

message XmsgImMsgAt
{
    repeated string cgt = 2; 
}

message XmsgImGroupMsgNotice
{
    string gcgt = 1; 
    string scgt = 2; 
    uint64 msgId = 3; 
    XmsgImMsg msg = 4; 
    uint64 gts = 5; 
    map<string, string> ext = 6; 
}

message XmsgImGroupMsgSyncReq
{
    string cgt = 1; 
    uint64 msgId = 2; 
    uint32 latest = 3; 
}

message XmsgImGroupMsgSyncRsp
{
    repeated XmsgImGroupMsgHistory msg = 1; 
}

message XmsgImGroupMsgHistory
{
    string scgt = 1; 
    uint64 msgId = 2; 
    XmsgImMsg msg = 3; 
    uint64 gts = 4; 
    bool isRead = 5; 
}

message XmsgImGroupMsgQueryReq
{
    string cgt = 1; 
    uint64 msgId = 2; 
    bool before = 3; 
    uint32 pageSize = 4; 
}

message XmsgImGroupMsgQueryRsp
{
    message XmsgImGroupMsgQueryRspItem
    {
        string scgt = 1; 
        uint64 msgId = 2; 
        XmsgImMsg msg = 3; 
        uint64 gts = 4; 
    }
    repeated XmsgImGroupMsgQueryRspItem msg = 1; 
}
message XmsgImGroupMsgReadReq
{
    string cgt = 1; 
    uint64 msgId = 2; 
}

message XmsgImGroupMsgReadRsp
{
    map<string, string> ext = 1; 
}

message XmsgImGroupMsgReadNotice
{
    string cgt = 1; 
    uint64 msgId = 2; 
}
message XmsgImHlrGroupMsgReq
{
    string cgt = 1; 
    string type = 2; 
    string msg = 3; 
    bytes dat = 4; 
}

message XmsgImHlrGroupMsgRsp
{
    map<string, string> ext = 1; 
}
message XmsgChannelStatusQueryReq
{
    repeated string cgt = 1; 
}

message XmsgChannelStatusQueryRsp
{
    map<string, XmsgChannelStatusUsrStatus> usrStatus = 1; 
    map<string, XmsgChannelStatusGroupStatus> groupStatus = 2; 
}
message XmsgChannelStatusSubReq
{
    repeated string cgt = 1; 
}

message XmsgChannelStatusSubRsp
{
    map<string, XmsgChannelStatusUsrStatus> usrStatus = 1; 
    map<string, XmsgChannelStatusGroupStatus> groupStatus = 2; 
}
message XmsgChannelStatusUnSubReq
{
    repeated string cgt = 1; 
}

message XmsgChannelStatusUnSubRsp
{
    map<string, string> ext = 1; 
}
message XmsgChannelStatusPubUsrStatusNotice
{
    string cgt = 1; 
    string plat = 2; 
    string did = 3; 
    string status = 4; 
}
message XmsgChannelStatusPubGroupStatusNotice
{
    string cgt = 1; 
    string status = 2; 
}
message XmsgChannelStatusUsrStatus
{
    message XmsgChannelStatusUsrClientStatus
    {
        string plat = 1; 
        string did = 2; 
        string status = 3; 
    }
    repeated XmsgChannelStatusUsrClientStatus client = 2; 
}
message XmsgChannelStatusGroupStatus
{
    string status = 1; 
}
message XmsgImGroupMemberAddReq
{
    string cgt = 1; 
    repeated XmsgImGroupAddMember member = 2;
}

message XmsgImGroupMemberAddRsp
{
    map<string, string> ext = 1; 
}
message XmsgImGroupMemberQueryReq
{
    string gcgt = 1; 
    repeated string mcgt = 2; 
}

message XmsgImGroupMemberQueryRsp
{
    repeated XmsgImGroupInfoMember member = 1; 
}
message XmsgImGroupMemberUpdateReq
{
    string gcgt = 1; 
    string mcgt = 2; 
    map<string, string> upsert = 3; 
    repeated string remove = 4; 
}

message XmsgImGroupMemberUpdateRsp
{
    map<string, string> ext = 1; 
}
message XmsgImGroupMemberDeleteReq
{
    string gcgt = 1; 
    repeated string mcgt = 2; 
}

message XmsgImGroupMemberDeleteRsp
{
    map<string, string> ext = 1; 
}
message XmsgImSdkEventAdapter
{
    uint32 apiId = 1; 
    XmsgImSdkEventType evnType = 2; 
    XmsgImSdkEventNetNotice netNotice = 3; 
    XmsgImSdkEventNetReq netReq = 4; 
    XmsgImSdkEventNetRsp netRsp = 5; 
    XmsgImSdkEventDbRsp dbRsp = 6; 
    XmsgImSdkEventCxxLog cxxLog = 7; 
    message XmsgImSdkEventNetNotice
    {
        string msg = 1; 
        bytes dat = 2; 
    }

    message XmsgImSdkEventNetReq
    {
        uint32 tid = 1; 
        string msg = 2; 
        bytes dat = 3; 
    }

    message XmsgImSdkEventNetRsp
    {
        uint32 tid = 1; 
        uint32 ret = 2; 
        string desc = 3; 
        string msg = 4; 
        bytes dat = 5; 
    }

    message XmsgImSdkEventDbRsp
    {
        uint32 tid = 1; 
        uint32 ret = 2; 
        string desc = 3; 
        XmsgImClientDbCrudRsp dat = 5; 
    }

    message XmsgImSdkEventCxxLog
    {
    	 uint32 lev = 1; 
        string log = 2; 
    }
}

message XmsgImSdkEventXmsgImAuth
{
    string evn = 1; 
    uint32 times = 2; 
    string addr = 3; 
}

message XmsgImSdkEventXmsgAp
{
    string evn = 1; 
    uint32 times = 2; 
    string addr = 3; 
}

enum XmsgImSdkEventType {
    X_MSG_IM_SDK_EVENT_TYPE_NET_NOTICE = 0x00; 
    X_MSG_IM_SDK_EVENT_TYPE_NET_REQ = 0x01; 
    X_MSG_IM_SDK_EVENT_TYPE_NET_RSP = 0x02; 
    X_MSG_IM_SDK_EVENT_TYPE_DB_RSP = 0x03; 
    X_MSG_IM_SDK_EVENT_TYPE_CXX_LOG = 0x04; 
}
message  XmsgOssUploadSimpleReq
{
    string objName = 1; 
    uint64 objSize = 2; 
    map<string, string> ext = 3; 
}

message  XmsgOssUploadSimpleRsp
{
    string oid = 1; 
    string hashVal = 2; 
    map<string, string> ext = 3; 
}
message  XmsgOssDownloadSimpleReq
{
    string oid = 1; 
    string cgt = 2; 
    uint64 offset = 3; 
    uint64 len = 4; 
    map<string, string> ext = 5; 
}

message  XmsgOssDownloadSimpleRsp
{
    string objName = 1; 
    uint64 objSize = 2; 
    string hashVal = 3; 
    uint64 gts = 4; 
    map<string, string> ext = 5; 
}
message  XmsgOssUsrObjInfoQueryReq
{
    uint64 sts = 1; 
    uint64 ets = 2; 
    uint32 page = 3; 
    uint32 pageSize = 4; 
}

message  XmsgOssUsrObjInfoQueryRsp
{
    repeated  XmsgOssUsrObjInfo objInfo = 1; 
}

message  XmsgOssUsrObjInfo
{
    string oid = 1; 
    string objName = 2; 
    uint64 objSize = 3; 
    string hashVal = 4; 
    uint64 gts = 5; 
}
message XmsgClientTokenInfo
{
    string cgt = 1;
    string token = 2;
    string alg = 3;
    string slat = 4;
    string plat = 5;
    string did = 6;
    string sign = 7;  
}
message XmsgImHlrAttachSimpleReq
{
    string token = 1; 
    string salt = 2; 
    string sign = 3; 
    string alg = 4; 
    string cgt = 5; 
    map<string, string> ext = 6; 
}

message XmsgImHlrAttachSimpleRsp
{
    map<string, string> ext = 1; 
}

message XmsgImHlrDetachSimpleReq
{
    map<string, string> ext = 1; 
}

message XmsgImHlrDetachSimpleRsp
{
    map<string, string> ext = 1; 
}
message XmsgImHlrOtherClientAttachReq
{
    XmsgImClientDeviceInfo dev = 1; 
    string host = 2; 
}

message XmsgImHlrOtherClientAttachRsp
{
    string action = 1; 
}

message XmsgImHlrOtherClientAttachNotice
{
	XmsgImClientDeviceInfo dev = 1; 
    string host = 2; 
}

message XmsgImAuthSimpleReq
{
    string usr = 1; 
    string salt = 2; 
    string sign = 3; 
    XmsgImClientDeviceInfo dev = 4; 
}

message XmsgImAuthSimpleRsp
{
    string token = 1; 
    string secret = 2; 
    uint64 expired = 3; 
    repeated XmsgImClientServiceAddress apAddr = 4; 
    repeated XmsgImClientServiceAddress fsAddr = 5; 
    string cgt = 7; 
    map<string, string> ext = 8; 
}
message XmsgImAuthRegSimpleReq
{
    string usr = 1; 
    string salt = 2; 
    string pwd = 3; 
    XmsgImClientDeviceInfo dev = 4; 
}

message XmsgImAuthRegSimpleRsp
{
	string cgt = 1;
    map<string, string> ext = 2; 
}
message XmsgImClientDeviceInfo
{
    string plat = 1; 
    string did = 2; 
    string ver = 3; 
    map<string, string> ext = 4; 
}
message XmsgImClientServiceAddress
{
    string ip = 1; 
    uint32 port = 2; 
    uint32 weight = 3; 
    repeated string proto = 4; 
    map<string, string> ext = 5; 
}
message XmsgImHlrOtherUsrInfoQueryReq
{
    repeated string cgt = 1; 
}

message XmsgImHlrOtherUsrInfoQueryRsp
{
    map<string, XmsgImHlrOtherUsrInfo> usrInfo = 1; 
}
message XmsgImHlrOtherUsrInfo
{
    map<string, string> info = 1; 
}
message XmsgFileUploadSimpleReq
{
    string fileName = 1; 
    uint64 fileSize = 2; 
    map<string, string> ext = 3; 
}

message XmsgFileUploadSimpleRsp
{
    string fid = 1; 
    string hashVal = 2; 
    map<string, string> ext = 3; 
}
message XmsgFileDownloadSimpleReq
{
    string fid = 1; 
    string cgt = 2; 
    uint64 offset = 3; 
    uint64 len = 4; 
    map<string, string> ext = 5; 
}

message XmsgFileDownloadSimpleRsp
{
    string fileName = 1; 
    uint64 fileSize = 2; 
    string hashVal = 3; 
    uint64 gts = 4; 
    map<string, string> ext = 5; 
}
message XmsgFileUsrFileInfoQueryReq
{
    uint64 sts = 1; 
    uint64 ets = 2; 
    uint32 page = 3; 
    uint32 pageSize = 4; 
}

message XmsgFileUsrFileInfoQueryRsp
{
    repeated XmsgFileUsrFileInfo fileInfo = 1; 
}

message XmsgFileUsrFileInfo
{
    string fid = 1; 
    string fileName = 2; 
    uint64 fileSize = 3; 
    string hashVal = 4; 
    uint64 gts = 5; 
}
message XmsgImHlrUsrDat
{
    string uid = 1; 
    uint64 ver = 2; 
    XmsgImHlrUsrDatPri pri = 3; 
    XmsgImHlrUsrDatPub pub = 4; 
    uint64 gts = 5; 
    uint64 uts = 6; 
}

message XmsgImHlrUsrDatPri
{
    bool enable = 1; 
    map<string, string> info = 2; 
}

message XmsgImHlrUsrDatPub
{
    map<string, string> info = 1; 
}


message XmsgImHlrUsrInfoQueryReq
{
    map<string, string> ext = 1; 
}

message XmsgImHlrUsrInfoQueryRsp
{
    map<string, string> info = 1; 
}

message XmsgImHlrUsrInfoUpdateReq
{
    map<string, string> info = 1; 
}

message XmsgImHlrUsrInfoUpdateRsp
{
    map<string, string> ext = 1; 
}
message XmsgImClientDbCrudReq
{
    string sql = 1; 
    repeated XmsgImClientDbRow row = 2; 
}

message XmsgImClientDbCrudRsp
{
    uint32 change = 1; 
    map<string, uint32> column = 2; 
    repeated XmsgImClientDbRow row = 4; 
}

message XmsgImClientDbRow
{
    repeated XmsgImClientDbFiled col = 1; 
}

message XmsgImClientDbFiled
{
    XmsgImClientDbFiledType type = 1; 
    uint64 valInt = 2; 
    string valText = 3; 
    bytes valBlob = 4; 
}

enum XmsgImClientDbFiledType {
    X_MSG_IM_CLIENT_DB_FILED_TYPE_BIGINT = 0x00; 
    X_MSG_IM_CLIENT_DB_FILED_TYPE_TEXT = 0x01; 
    X_MSG_IM_CLIENT_DB_FILED_TYPE_BLOB = 0x02; 
    X_MSG_IM_CLIENT_DB_FILED_TYPE_NULL = 0x03; 
}

message XmsgImClientKv
{
    map<string, string> kv = 1; 
}
message XmsgImOrgSyncSubReq
{
    uint64 ver4dept = 1; 
    uint64 ver4deptUsr = 2; 
    uint64 ver4usr = 3; 
}

message XmsgImOrgSyncSubRsp
{
    uint64 ver4deptLatest = 1; 
    uint64 ver4deptUsrLatest = 2; 
    uint64 ver4usrLatest = 3; 
}
message XmsgImOrgSyncPubReq
{
    repeated XmsgImOrgEvent event = 1; 
}

message XmsgImOrgSyncPubRsp
{
    map<string, string> ext = 1; 
}
message XmsgImOrgChangedNotice
{
    XmsgImOrgEvent event = 1; 
}
message XmsgImOrgNodeChildQueryReq
{
    string cgt = 1; 
}

message XmsgImOrgNodeChildQueryRsp
{
    repeated XmsgImOrgNodeChild child = 1; 
}
message XmsgImOrgNodeDeptUsrQueryReq
{
    string dcgt = 1; 
    string ucgt = 2; 
}

message XmsgImOrgNodeDeptUsrQueryRsp
{
    string name = 2; 
    bool enable = 3; 
    XmsgImOrgNodeInfo info = 4; 
    uint64 ver = 5; 
    uint64 gts = 6; 
    uint64 uts = 7; 
}
message XmsgImOrgNodeQueryReq
{
    string cgt = 1; 
}

message XmsgImOrgNodeQueryRsp
{
    string pgt = 1; 
    string name = 2; 
    bool enable = 3; 
    XmsgImOrgNodeType type = 4; 
    XmsgImOrgNodeInfo info = 5; 
    uint64 ver = 6; 
    uint64 gts = 7; 
    uint64 uts = 8; 
}
message XmsgImOrgEvent
{
    XmsgImOrgEventDept dept = 1; 
    XmsgImOrgEventDeptUsr deptUsr = 2; 
    XmsgImOrgEventUsr usr = 3; 
}
message XmsgImOrgEventDept
{
    string cgt = 1; 
    string pcgt = 2; 
    string name = 3; 
    bool enable = 4; 
    XmsgImOrgNodeInfo info = 5; 
    uint64 ver = 6; 
    uint64 gts = 7; 
    uint64 uts = 8; 
}
message XmsgImOrgEventDeptUsr
{
    string dcgt = 1; 
    string ucgt = 2; 
    string name = 3; 
    bool enable = 4; 
    XmsgImOrgNodeInfo info = 5; 
    uint64 ver = 6; 
    uint64 gts = 7; 
    uint64 uts = 8; 
}
message XmsgImOrgEventUsr
{
    string cgt = 1; 
    string name = 2; 
    bool enable = 3; 
    XmsgImOrgNodeInfo info = 4; 
    uint64 ver = 5; 
    uint64 gts = 6; 
    uint64 uts = 7; 
}
enum XmsgImOrgNodeType {
    X_MSG_IM_ORG_NODE_TYPE__RESERVED__ = 0x00;
    X_MSG_IM_ORG_NODE_TYPE_BRANCH = 0x01; 
    X_MSG_IM_ORG_NODE_TYPE_LEAF = 0x02; 
}
message XmsgImOrgNodeInfo
{
    map<string, string> kv = 1; 
}
message XmsgImOrgNodeChild
{
    string cgt = 1; 
    string name = 2; 
    bool enable = 3; 
    XmsgImOrgNodeType type = 4; 
    XmsgImOrgNodeInfo info = 5; 
    uint64 ver = 6; 
    uint64 gts = 7; 
    uint64 uts = 8; 
}
message XmsgImGroupUsrGroupQueryReq
{
    map<string, string> ext = 1; 
}

message XmsgImGroupUsrGroupQueryRsp
{
    repeated XmsgImGroupUsrGroupInfo group = 1; 
}
message XmsgImGroupUsrGroupInfo
{
    string cgt = 1; 
    string name = 2; 
    map<string, string> info = 3; 
    uint64 ver = 4; 
    uint64 gts = 5; 
    uint64 uts = 6; 
    bool usr2usr = 7; 
}
message XmsgImGroupCreateReq
{
    map<string, string> info = 1; 
    repeated XmsgImGroupAddMember member = 2; 
}

message XmsgImGroupCreateRsp
{
    string cgt = 1; 
    uint64 gts = 2; 
}
message XmsgImGroupAddMember
{
    string cgt = 1; 
    map<string, string> info = 2; 
}
message XmsgImGroupSyncReq
{
    uint64 ver4usr = 1; 
    map<string, string> ext = 2; 
}

message XmsgImGroupSyncRsp
{
    repeated XmsgImGroupSyncEvent event = 1; 
}
message XmsgImGroupSyncEvent
{
    string cgt = 1; 
    string oper = 2; 
    map<string, string> info = 3; 
    uint64 ver4usr = 4; 
    uint64 gts4usr = 5; 
    uint64 uts4usr = 6; 
    uint64 gts4group = 7; 
}
message XmsgImGroupSyncNotice
{
    XmsgImGroupSyncEvent event = 1; 
}
message XmsgImGroupSyncGroupReq
{
    string cgt = 1; 
    uint64 ver = 2; 
    map<string, string> ext = 3; 
}

message XmsgImGroupSyncGroupRsp
{
    XmsgImGroupSyncGroupEventInfo info = 1; 
    repeated XmsgImGroupSyncGroupEventMember member = 2; 
}
message XmsgImGroupSyncGroupEventInfo
{
    map<string, string> info = 1; 
    uint64 ver = 2; 
    uint64 gts = 3; 
    uint64 uts = 4; 
}

message XmsgImGroupSyncGroupEventMember
{
    string cgt = 1; 
    string oper = 2; 
    map<string, string> info = 3; 
    uint64 ver = 4; 
    uint64 gts = 5; 
    uint64 uts = 6; 
}
message XmsgImGroupEventNotice
{
    XmsgImGroupSyncGroupEventInfo info = 1; 
    XmsgImGroupSyncGroupEventMember member = 2; 
}
message XmsgImGroupInfoQueryReq
{
    string cgt = 1; 
    bool member = 2; 
}

message XmsgImGroupInfoQueryRsp
{
    XmsgImGroupInfoSelfInfo info = 1; 
    repeated XmsgImGroupInfoMember member = 2; 
}
message XmsgImGroupInfoSelfInfo
{
    string cgt = 1; 
    bool enable = 2; 
    map<string, string> info = 3; 
    uint64 ver = 4; 
    uint64 gts = 5; 
    uint64 uts = 6; 
}

message XmsgImGroupInfoMember
{
    string cgt = 1; 
    bool enable = 2; 
    map<string, string> info = 3; 
    uint64 ver = 4; 
    uint64 gts = 5; 
    uint64 uts = 6; 
}
message XmsgImGroupInfoUpdateReq
{
    string cgt = 1; 
    map<string, string> upsert = 2; 
    repeated string remove = 3; 
}

message XmsgImGroupInfoUpdateRsp
{
    map<string, string> ext = 1; 
}
message XmsgImGroupMsgRecvCfgReq
{
    string cgt = 1; 
    string type = 2; 
}

message XmsgImGroupMsgRecvCfgRsp
{
    map<string, string> ext = 1; 
}
